# x86-os

./: .gitignore  Cargo.toml  Makefile  README.md  build-target.json  build.rs  kernel.ld
env/: bochsrc.bxrc  env.sh  install_tools.sh
src/: Makefile  bochsrc.bxrc  boot.s  lib.rs  new
src/00_boot_only/: Makefile  boot.lst  boot.s
src/01_bpb/: boot.s
src/02_save_data/: boot.s
src/03_boot_putc/: Makefile  boot.s
src/04_func_putc/: Makefile  boot.s
src/05_func_puts/: Makefile  boot.s
src/include/: macro.s
src/modules/protect/: memcmp.s  memcpy.s
src/modules/real/: itoa.s  putc.s  reboot.s
src_asm/: boot.s  lib_protect.s  stage_2.s
src_asm/include/: define.s  macro.s
src_asm/modules/real/: get_drive_param.s  get_font_addr.s  get_mem_info.s  kbc.s  lba2chs.s  memcmp.s  memcpy.s  putc.s  puts.s  read_chs.s  read_lba.s  reboot.s
